<resources>
    <string name="app_name">集合</string>

    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <string name="login_title">登录</string>
    <string name="login_phone_num">手机号</string>
    <string name="login_pass_word">密　码</string>
    <string name="login_sure">登　　录</string>
    <string name="find_pass_word">忘记密码？</string>
    <string name="register_now">立即注册</string>
    <string name="register_vertify_code">验证码</string>
    <string name="next">下一步</string>
    <string name="register_title">注册</string>
    <string name="register_get">获取验证码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="register_data">完善资料</string>
    <string name="register_success">注册成功</string>
    <string name="register_data_tip_icon">点击选择头像</string>
    <string name="picture">图片</string>

    <string name="create">生成</string>
    <string name="scan_failed">扫描失败</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="button_ok">确定</string>



    <!--new strings-->
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="nick_name">昵称</string>
    <string name="phonenumber">手机号</string>
    <string name="password">密码</string>
    <string name="password_register">密　码</string>
    <string name="verify_code">验证码</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="login">登录</string>
    <string name="start">注册</string>
    <string name="complete">完成</string>
    <string name="forget_password">忘记密码?</string>
    <string name="register_new_user">新用户注册</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="get_verify_code_again">重新获取验证码</string>
    <string name="select_yout_intrestings">请选择</string>
    <!--<string name="not_get_the_verify_code_and_retry">如果仍未收到验证码，请确保手机信号良好并重试</string>-->
    <string name="reset_password">重置密码</string>
    <string name="intresting">兴趣</string>
    <string name="next_step">下一步</string>
    <string name="modify">修改</string>
    <string name="exit">退出登录</string>
    <string name="mark">标签</string>
    <string name="personal_info">个人资料</string>
    <string name="activity_title">活动</string>
    <string name="mpdify_info">修改资料</string>
    <string name="complete_register">完成注册</string>
    <string name="select_no_image">您还没有选择任何图片</string>
    <string name="input_right_mobilephone">请输入正确的手机号码</string>
    <string name="sending">正在发送</string>
    <string name="vertifycode_send_success">验证码已发送</string>
    <string name="vertifycode_send_fail">验证码发送失败，请重新点击发送</string>
    <string name="input_right_password">请输入至少六位长度的密码</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="choose_sex">请选择性别</string>
    <string name="choose_photo">请选择头像</string>
    <string name="choose_birthday">请选择生日</string>
    <string name="choose_intresting">请选择您感兴趣的标签</string>
    <string name="input_verifycode">请输入验证码</string>
    <string name="is_logining">正在登录</string>
    <string name="is_registing">正在注册</string>
    <string name="geting_personal_info">正在获取用户资料</string>
    <string name="saving">正在保存</string>
    <string name="pick_right_birthday">请选择正确的生日</string>
    <string name="nearby_act">附近活动</string>
    <string name="route_chart">现场图示</string>
    <string name="isresetting_pwd">正在重置密码</string>
    <string name="is_perfect_profile">正在完善资料</string>
    <string name="login_timeout">您的登录状态已失效，请重新登录</string>
    <string name="login_other_service">您的帐号已在其他地方登录，请重新登录</string>
    <string name="reset_pwd_success">重置密码成功，请您牢记新密码，并用新密码登录</string>
    <string name="is_refreshing_nearby_act">正在刷新周围活动</string>
    <string name="modify_info_success">修改成功</string>
    <string name="search">搜索</string>
    <string name="keyword_of_act">活动关键字</string>
    <string name="input_keyword_of_act">请输入活动关键字</string>
    <string name="my_assn">我的社团</string>
    <string name="apply_assn">申请的社团</string>
    <string name="recommend_assn">推荐的社团</string>
    <string name="invited_assn">邀请我的社团</string>
    <string name="my_act">活动日历</string>
    <string name="my_share">我的分享</string>
    <string name="file">文件</string>
    <string name="pv">浏览量</string>
    <string name="pv_history">浏览历史</string>
    <string name="total_pv">总浏览量（次）:</string>
    <string name="income_of_week">本周收入</string>
    <string name="show_history">查看历史</string>
    <string name="upload">上传</string>
    <string name="uploading">正在上传</string>
    <string name="upload_fail">上传失败</string>
    <string name="wait_for_upload">等待上传</string>
    <string name="act_venue">活动位置</string>
    <string name="act_photos_upload_over">活动照片上传完毕</string>
    <string name="uploading_pelase_wait">照片正在上传中，请稍等</string>
    <string name="uploading_over_with_fail">有照片上传失败，您可以点击重新照片重新上传或者直接退出取消上传</string>
    <string name="income_history">收入历史记录</string>
    <string name="me">我</string>
    <string name="is_getting_location">正在定位....</string>
    <string name="auto_location_city">自动定位: %1$s</string>
    <string name="auto_location_city_is_unuse">定位到的城市暂未开放，请选择下列您感兴趣的城市</string>
    <string name="get_location_fail">定位失败</string>
    <string name="select_city_please">请先选择您感兴趣的城市</string>
    <string name="select_city">选择城市</string>
    <string name="get_city_list">正在获取城市列表</string>
    <string name="all">全部</string>
    <string name="had_end">已结束</string>
    <string name="need_pay">待缴费</string>
    <string name="need_stay_in">待参加</string>
    <string name="filter">筛选</string>
    <string name="input_old_pwd">输入原密码</string>
    <string name="input_new_pwd">输入新密码</string>
    <string name="input_right_old_password">请输入正确的原密码</string>
    <string name="input_right_new_password">请输入至少六位长度的新密码</string>
    <string name="input_new_nickename">输入新昵称</string>
    <string name="input_new_phone">输入新手机号</string>
    <string name="no_route">该活动暂无路线图</string>
    <string name="install_bdmap_first">使用导航功能请先安装 百度地图</string>
    <string name="is_build_venue">正在加载中...</string>
    <string name="file_download_fail">文件下载失败，请重试</string>

    <!--<string name="birthday_format">%1$d-%2$2d-%3$2d</string>-->
    <string name="file_download_format">文件已下载至:%1$s</string>
    <string name="integral_format">积分:%1$d</string>
    <string name="age_format">%1$d岁</string>
    <string name="select_image_done">完成(%1$d/%2$d)</string>
    <string name="verify_code_countdown">%1$dS后重新获取</string>
    <string name="my_assn_format">已加入：%1$d，被邀请：%2$d</string>
    <string name="my_act_format">即将开始：%1$d，已参加：%2$d</string>
    <string name="new_act_count_format">新活动：%1$d</string>
    <string name="jioner_count_format">已有 %1$d 人参加</string>
</resources>
