<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_nor_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/title_bar_base"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:layout_marginTop="16dp"
        android:background="@color/line_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_phonenumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/edit_white_style"
            android:layout_weight="2"
            android:gravity="center|left"
            android:singleLine="true"
            android:maxLength="13"
            android:inputType="numberDecimal"
            android:hint="@string/phonenumber"/>

        <com.gather.android.widget.VerifyCodeButton
            android:id="@+id/btn_getverifycode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/blue_btn_click_style"
            android:textSize="@dimen/text_m"
            android:textColor="@color/white"
            android:text="@string/get_verify_code"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:background="@color/line_color"/>

    <EditText
        android:id="@+id/et_verifycode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        style="@style/edit_white_style"
        android:gravity="center|left"
        android:singleLine="true"
        android:maxLength="6"
        android:inputType="numberDecimal"
        android:hint="@string/verify_code"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:background="@color/line_color"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        style="@style/edit_white_style"
        android:gravity="center|left"
        android:singleLine="true"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:background="@color/line_color"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/green_corner_btn_click_style"
        android:textSize="17sp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:text="确　定"/>

</LinearLayout>