<?xml version="1.0" encoding="utf-8"?>
<com.gather.android.widget.KeyBoardLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/keyboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="80dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:src="@drawable/icon_login_logo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:contentDescription="@null"
            android:maxWidth="80dp"
            android:adjustViewBounds="true"
            android:src="@drawable/icon_login_name" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_edittext_bg"
        android:gravity="center"
        android:hint="@string/phonenumber"
        android:inputType="numberDecimal"
        android:maxLength="13"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_dark"
        android:textSize="@dimen/text_l" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_edittext_bg"
        android:gravity="center"
        android:hint="@string/password"
        android:imeOptions="actionGo"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_dark"
        android:textSize="@dimen/text_l" />

    <Button
        android:id="@+id/btn_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginTop="3dp"
        android:background="@android:color/transparent"
        android:text="@string/forget_password"
        android:textColor="@color/white_to_blue_textcolor"
        android:textSize="@dimen/text_l" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/green_corner_btn_click_style"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_l" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:background="@android:color/transparent"
        android:text="@string/register_new_user"
        android:textColor="@color/white_to_blue_textcolor"
        android:textSize="@dimen/text_l" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</com.gather.android.widget.KeyBoardLinearLayout>





