<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_nor_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/title_bar_base"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="40dp"
        android:background="@color/line_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_verifycode"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            style="@style/edit_white_style"
            android:gravity="center|left"
            android:singleLine="true"
            android:maxLength="6"
            android:inputType="numberDecimal"
            android:hint="@string/verify_code"/>

        <com.gather.android.widget.VerifyCodeButton
            android:id="@+id/btn_getverifycode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/blue_btn_click_style"
            android:textSize="@dimen/text_m"
            android:textColor="@color/white"
            android:text="@string/get_verify_code"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color"/>

    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/text_m"
        android:background="@color/transparent"
        android:textColor="@android:color/holo_orange_dark"
        android:gravity="center|right"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"/>

    <Button
        android:id="@+id/btn_complete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/green_corner_btn_click_style"
        android:textSize="@dimen/text_l"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:text="@string/complete"/>

</LinearLayout>