<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_nor_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/title_bar_base" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:layout_marginTop="16dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/iv_headportrait"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_alignParentLeft="true"
                app:actualImageScaleType="centerCrop"
                app:placeholderImage="@drawable/def_headportrait"
                app:placeholderImageScaleType="centerCrop"
                app:pressedStateOverlayImage="@color/image_click_color" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="bottom|right"
                android:src="@drawable/ic_btn_choose_headicon" />

            <View
                android:layout_width="@dimen/line_size"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:background="@color/line_color" />

        </FrameLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:paddingLeft="10dp"
                    android:paddingRight="16dp"
                    android:text="@string/phonenumber"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/text_l" />

                <EditText
                    android:id="@+id/et_phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center|left"
                    android:inputType="numberDecimal"
                    android:maxLength="13"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_l" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:paddingLeft="10dp"
                    android:paddingRight="16dp"
                    android:text="@string/password_register"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/text_l" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center|left"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_l" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:background="@color/line_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:layout_marginTop="16dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/nick_name"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_l" />

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center|left"
            android:paddingRight="16dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_l" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:background="@color/line_color" />

    <LinearLayout
        android:id="@+id/btn_sex"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/white_bg_click_style"
        android:clickable="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/sex"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_l" />

        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|left"
            android:paddingRight="16dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_dark"
            android:textSize="@dimen/text_l" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="16dp"
            android:adjustViewBounds="true"
            android:maxWidth="5dp"
            android:src="@drawable/arrow_right"
            android:visibility="gone" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:background="@color/line_color" />

    <LinearLayout
        android:id="@+id/btn_age"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/white_bg_click_style"
        android:clickable="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/age"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_l" />

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|left"
            android:paddingRight="16dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_dark"
            android:textSize="@dimen/text_l" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="16dp"
            android:adjustViewBounds="true"
            android:maxWidth="5dp"
            android:src="@drawable/arrow_right"
            android:visibility="gone" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:background="@color/line_color" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/green_corner_btn_click_style"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="@dimen/text_l" />

</LinearLayout>